# icrawler

./: .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  README.rst  downloader.py  iCrawlerTK.py  pyproject.toml  requirements.txt  setup.py  test.py  tox.ini
.github/: merge_rules.yaml
.github/workflows/: push.yaml
docs/: Makefile  api.rst  builtin.rst  conf.py  extend.rst  index.rst  install.rst  make.bat  proxy.rst  release_notes.rst  usage.rst
examples/: CODE_OF_CONDUCT.md  FileTypes.py  FilenameDownloader.py  GoogleLanguageOptions.py  LanguageOptions.py  crawl.py  filelist_demo.txt  iCrawlerTK.bat  iCrawlerTK.py  iCrawlerTK.yaml  logging.conf  readme.md
icrawler/: __init__.py  baidu.py  crawler.py  defaults.py  downloader.py  dup_filter.py  feeder.py  google.py  greedy.py  iCrawlerTK.py  parser.py  proxy_pool.py  version.py
icrawler/builtin/: __init__.py  baidu.py  bing.py  filter.py  flickr.py  google.py  greedy.py  urllist.py
icrawler/examples/: __init__.py  baidu.py  bing.py  flickr.py  google.py  greedy.py  urllist.py
icrawler/storage/: __init__.py  base.py  filesystem.py  google_storage.py  gsfilesystem.py
icrawler/utils/: __init__.py  cached_queue.py  dup_checker.py  dup_filter.py  proxy_pool.py  session.py  signal.py  thread_pool.py  thread_status.py  wrapper.py
icrawler/utils/examples/: crawl.py
image_crawler/: __init__.py  crawler.py  downloader.py  dup_filter.py  examples.py  feeder.py  parser.py
image_crawler/examples/: __init__.py  baidu.py  bing.py  flickr.py  google.py
tests/: test_todo.py
